<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".farmer.ui.fragments.FarmerListItemFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/select_product_type"
            android:textColor="@color/primary_text_color"
            android:textSize="16sp" />

        <include layout="@layout/fragment_product_type"
            android:id="@+id/fragment_product_type" />
            />


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:text="@string/add_product_name"
            android:textColor="@color/primary_text_color"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/eg_tomato">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/product_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/add_photo_product"
            android:textColor="@color/primary_text_color"
            android:textSize="16sp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_customimage"
            app:cardCornerRadius="10dp"
            android:layout_width="match_parent"
            android:layout_height="128dp"
            android:layout_margin="15dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="5dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_customimageselect"
                    android:layout_width="128dp"
                    android:layout_height="84dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:padding="15dp"
                    android:src="@drawable/add_image" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_Clicktoupload"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/iv_customimageselect"
                    android:layout_centerHorizontal="true"
                    android:text="@string/click_here"
                    android:textColor="@color/primary_text_color" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/add_product_details"
            android:textColor="@color/primary_text_color"
            android:textSize="16sp" />
        <!--        create a text input layout and add edit text inside it-->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/product_description"
                android:layout_width="match_parent"
                android:layout_height="128dp"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/harvested_date"
            android:textColor="@color/primary_text_color"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/harvested_date_format">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/harvested_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/expiry_date"
            android:textColor="@color/primary_text_color"
            android:textSize="16sp" />
        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/harvested_date_format">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/expiry_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/price"
            android:textColor="@color/primary_text_color"
            android:textSize="16sp" />
        <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            app:prefixText="₹ "
            app:prefixTextColor="@color/primary_text_color"
            android:hint="@string/eg_40">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/product_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_preview_btn"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/langbuttondesign"
            android:layout_margin="15dp"
            android:textColor="@color/white"
            android:text="@string/preview_product"
            android:fontFamily="@font/lato_bold"
            android:textSize="20sp"
            android:textAllCaps="false"
            />
    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.core.widget.NestedScrollView>