<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".farmer.ui.fragments.WalletConnectFragment">
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_enter_wallet_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/enter_wallet_details"
        android:fontFamily="@font/lato_bold"
        android:textSize="24sp"
        android:textColor="@color/primary_text_color"
        android:layout_margin="16dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        style="@style/TextInputTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/enter_wallet_name"
        app:prefixTextColor="@color/primary_text_color"
        app:startIconDrawable="@drawable/baseline_drive_file_rename_outline_24"
        app:helperText="*Required"
        app:helperTextEnabled="true"
        app:helperTextTextColor="@color/ErrorColor"
        app:layout_constraintTop_toBottomOf="@id/tv_enter_wallet_details"
        >

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/et_enter_Wallet_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/WalletPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        style="@style/TextInputTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/enter_password"
        app:counterEnabled="true"
        app:startIconDrawable="@drawable/baseline_lock_24"
        app:counterMaxLength="10"
        app:helperText="*Required"
        app:helperTextEnabled="true"
        app:helperTextTextColor="@color/ErrorColor"
        app:layout_constraintTop_toBottomOf="@id/textInputLayout"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_enter_Wallet_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_create_wallet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/WalletPassword"
        android:background="@drawable/langbuttondesign"
        android:layout_margin="16dp"
        android:text="@string/create_wallet"
        android:textColor="@color/white"
        android:fontFamily="@font/lato_bold"
        android:textSize="16sp"
        android:textAllCaps="false"
        />

    <ProgressBar
        android:id="@+id/progress_wallet_connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.469"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/WalletPassword"
        />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ll_wallet_created"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/btn_create_wallet"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >



    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_wallet_created"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textSize="16sp"
        android:text="Wallet Created Successfully"
        android:fontFamily="@font/lato"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textColor="@color/primary_text_color"
        app:layout_constraintTop_toBottomOf="@id/btn_create_wallet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_wallet_created"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        >
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_wallet_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp"
                android:text="@string/wallet_name"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:textColor="@color/primary_text_color"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_wallet_name_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/tv_wallet_name"

                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp"
                android:text="this is wallet" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_wallet_password_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_wallet_name"
                android:layout_gravity="start"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp"
                android:text="@string/wallet_password"
                android:textColor="@color/primary_text_color"
                android:textStyle="bold" />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_wallet_password_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_wallet_name"
                android:layout_toEndOf="@id/tv_wallet_password_text"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp"
                android:text="this is wallet" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_wallet_address_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_wallet_password_text"
                android:layout_gravity="start"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp"
                android:text="@string/acc_address"
                android:textColor="@color/primary_text_color"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_wallet_address_text_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_wallet_password_value"
                android:layout_toEndOf="@id/tv_wallet_address_text"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp"
                android:text="this is wallet" />


        </RelativeLayout>

    </androidx.cardview.widget.CardView>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_copy_address"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/langbuttondesign"
                android:drawableStart="@drawable/baseline_content_copy_24"
                android:drawableTint="@color/white"
                android:fontFamily="@font/lato_bold"
                android:text="@string/copy_address"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp" />
            <ProgressBar
                android:id="@+id/processingToWallet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:visibility="gone"
                />
        </RelativeLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>



    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".9" />
</androidx.constraintlayout.widget.ConstraintLayout>